[gd_scene load_steps=18 format=3 uid="uid://b3ejquoi7rh0w"]

[ext_resource type="Texture2D" uid="uid://bi71i4xsbtd2v" path="res://character/assets/slime.png" id="1_4akj2"]
[ext_resource type="Script" path="res://boss/slime_boss.gd" id="1_whh7a"]
[ext_resource type="PackedScene" uid="uid://ywmac1n7bddj" path="res://UI/scenes/health_bar.tscn" id="2_4kigc"]
[ext_resource type="AudioStream" uid="uid://b6dn3mh3fofqq" path="res://Audios/Musicas Jogo/slime morte.wav" id="3_cf8vk"]
[ext_resource type="AudioStream" uid="uid://dq4boo855l4lx" path="res://Audios/Musicas Jogo/slime attack.wav" id="4_vi7d4"]
[ext_resource type="AudioStream" uid="uid://uhwpgo76x1g8" path="res://Audios/Musicas Jogo/danoSlime.wav" id="5_o6fi5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eaug0"]
size = Vector2(16, 13.3333)

[sub_resource type="Animation" id="Animation_hn46n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_mjvqp"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32]
}

[sub_resource type="Animation" id="Animation_qb22l"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_gbo5b"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 12, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s1k64"]
_data = {
"RESET": SubResource("Animation_hn46n"),
"death": SubResource("Animation_mjvqp"),
"idle": SubResource("Animation_qb22l"),
"walk": SubResource("Animation_gbo5b")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e5tue"]
size = Vector2(13.8333, 12.1667)

[sub_resource type="CircleShape2D" id="CircleShape2D_klji5"]
radius = 56.3031

[sub_resource type="Animation" id="Animation_3aoeh"]
resource_name = "HurtBlink"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.2001),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.831373, 0, 0.0313726, 0.501961), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_lik46"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.831373, 0, 0.0313726, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mvxpy"]
_data = {
"HurtBlink": SubResource("Animation_3aoeh"),
"RESET": SubResource("Animation_lik46")
}

[node name="CharacterBody2D" type="CharacterBody2D" node_paths=PackedStringArray("_texture", "_animation") groups=["inimigo"]]
scale = Vector2(6, 6)
script = ExtResource("1_whh7a")
_texture = NodePath("texture")
_animation = NodePath("Animation")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" groups=["inimigo"]]
position = Vector2(-2.38419e-07, 1.16667)
shape = SubResource("RectangleShape2D_eaug0")

[node name="texture" type="Sprite2D" parent="."]
clip_children = 2
texture = ExtResource("1_4akj2")
hframes = 7
vframes = 5

[node name="ColorRect" type="ColorRect" parent="texture"]
offset_left = -17.0
offset_top = -10.0
offset_right = 17.0
offset_bottom = 14.0
color = Color(0.831373, 0, 0.0313726, 0)

[node name="Animation" type="AnimationPlayer" parent="."]
root_node = NodePath("../texture")
libraries = {
"": SubResource("AnimationLibrary_s1k64")
}

[node name="Collision" type="CollisionShape2D" parent="."]
show_behind_parent = true
position = Vector2(0.0833333, 0.916666)
shape = SubResource("RectangleShape2D_e5tue")
debug_color = Color(0.259207, 0.634259, 1.92523e-07, 0.42)

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
position = Vector2(0, 3.25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
show_behind_parent = true
shape = SubResource("CircleShape2D_klji5")

[node name="HealthBar" parent="." instance=ExtResource("2_4kigc")]
offset_left = -5.0
offset_top = -8.0
offset_right = 4.0
offset_bottom = -7.0

[node name="Effects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mvxpy")
}

[node name="hurtTimer" type="Timer" parent="."]
one_shot = true

[node name="RandomMoveTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="DetectorWallRight" type="RayCast2D" parent="."]
target_position = Vector2(14, 0)
collide_with_areas = true

[node name="DetectorWallLeft" type="RayCast2D" parent="."]
target_position = Vector2(-14, 0)
collide_with_areas = true

[node name="DetectorWallBottom" type="RayCast2D" parent="."]
target_position = Vector2(0, 14)
collide_with_areas = true

[node name="DetectorWallTop" type="RayCast2D" parent="."]
target_position = Vector2(0, -10)
collide_with_areas = true

[node name="bg_sfxMorte" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_cf8vk")
bus = &"sfx"

[node name="bg_sfxAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_vi7d4")
bus = &"sfx"

[node name="bg_sfxDano" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_o6fi5")
bus = &"sfx"

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
